--- a/src/Frontend/src/app/Components/bed-chooser/bed-chooser.component.html
+++ b/src/Frontend/src/app/Components/bed-chooser/bed-chooser.component.html
@@ -53,9 +53,9 @@
 </div>
 <div class=" w3-container w3-rest">
   
-  <div *ngFor="let bed of beds; let i of index" [class.selected]="bed === selectedBed" (click)="gotoDetail()" on-mouseenter="onSelect(bed)" on-mouseleave="onSelect()"
+  <div *ngFor="let bed of beds; let i = index" [class.selected]="bed === selectedBed" (click)="gotoDetail()" on-mouseenter="onSelect(bed)" on-mouseleave="onSelect()"
      class=" w3-card-4 w3-quarter w3-accordion w3-padding-large w3-margin">
-    <!--<img [src]="getPicture(bed.id)"/>-->
+    <img *ngIf="pictures[i]" class="w3-image w3-round" [src]="pictures[i].image"/>
     Here will be a picture of the bed
     <p>{{bed.name}}</p>
     <div class="w3-accordion-content w3-hide" [class.w3-show]="bed === selectedBed">
