--- a/src/Frontend/src/app/Components/bed-chooser/bed-chooser.component.html
+++ b/src/Frontend/src/app/Components/bed-chooser/bed-chooser.component.html
@@ -46,7 +46,7 @@
   </div>
 
   <div class="form-row">
-    <button type="submit" class="w3-btn w3-blue w3-margin">Search</button>
+    <button type="submit" class="w3-btn w3-teal w3-margin">Search</button>
   </div>
 
 </form>
@@ -56,7 +56,6 @@
   <div *ngFor="let bed of beds; let i = index" [class.selected]="bed === selectedBed" (click)="gotoDetail()" on-mouseenter="onSelect(bed)" on-mouseleave="onSelect()"
      class=" w3-card-4 w3-quarter w3-accordion w3-padding-large w3-margin">
     <img *ngIf="pictures[i]" class="w3-image w3-round" [src]="pictures[i].image"/>
-    Here will be a picture of the bed
     <p>{{bed.name}}</p>
     <div class="w3-accordion-content w3-hide" [class.w3-show]="bed === selectedBed">
       <p>{{bed.color}}</p>
