--- a/src/Frontend/src/app/app.component.html
+++ b/src/Frontend/src/app/app.component.html
@@ -1,8 +1,8 @@
 <h1>{{title}}</h1>
 <nav>
-  <ul class="w3-navbar w3-light-grey w3-border w3-padding">
-    <li><a routerLink="/frontpage" class="w3-grey" routerLinkActive="active">Frontpage</a></li>
-    <li><a routerLink="/webshop" class="w3-grey" routerLinkActive="active">webshop</a></li>
+  <ul class="w3-navbar w3-border w3-padding">
+    <li><a routerLink="/frontpage" class="w3-border" routerLinkActive="active">Frontpage</a></li>
+    <li><a routerLink="/webshop" class="w3-border" routerLinkActive="active">webshop</a></li>
   </ul>
 </nav>
 <div class="w3-container w3-border w3-padding">
